--- a/styles/GalleryOverview.module.scss
+++ b/styles/GalleryOverview.module.scss
@@ -19,42 +19,73 @@ body {
 }
 
 .container {
-  width: 60vw;
-  margin: 1rem auto;
+  padding: 2rem ;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-direction: column;
+
+  @media (min-width: 480px) {
+    margin: 1rem auto;
+padding: 0;
+    width: 60vw;
+
+  }
+  @media (min-width: 960px) {
+
+    width: 60vw;
+
+  }
 }
 
 .gallery {
-  display: grid;
-  grid-template-columns: repeat(15, 6vw);
-  grid-template-rows: repeat(30, 4vh);
-  grid-gap: 2rem;
-  column-gap: 0;
+  //display: grid;
+  //grid-template-columns: repeat(3, 30vw);
+  //grid-template-rows: repeat(10, 20vh);
+  //grid-gap: 0.8rem;
+  //column-gap: 0.8rem;
   //align-content: stretch;
+
+  @media (min-width: 480px) {
+    display: grid;
+    grid-template-columns: repeat(3, 30vw);
+    grid-template-rows: repeat(10, 20vh);
+  }
+  @media (min-width: 1000px) {
+
+    grid-template-columns: repeat(3, 25vw);
+  }
+  @media (min-width: 1200px) {
+
+    grid-template-columns: repeat(3, 20vw);
+    grid-template-rows: repeat(10, 25vh);
+  }
 }
 
 .galleryItem {
-    justify-self:  center ;
-    flex-direction: column;
-    //padding: 1rem;
-    //margin: 0.5rem;
-    //border: 0.5rem solid white;
-      display: flex;
-    align-items: center;
-      justify-content: center;
-    position: relative;
+  justify-self: center;
+  flex-direction: column;
+  //padding: 1rem;
+  margin-bottom: 2rem;
+  //border: 0.5rem solid white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 100%;
 
   @media (min-width: 480px) {
+    margin: 0;
   }
 
   p {
     text-align: center;
-    //position: absolute;
-    //bottom: 0;
-    //left: 0;
+    position: absolute;
+    //border: 1rem solid transparent;
+    bottom: 0.3rem;
+    right: 0.3rem;
+    left: 0.3rem;
+    background-color: rgba(0, 0, 0, 0.5);
   }
 }
 .galleryImg {
@@ -62,14 +93,26 @@ body {
   height: 100%;
   object-fit: cover;
   display: block;
+  animation: image 1s linear;
   border: 0.3rem solid white;
+
+
+  //div {
+  //  img{
+  //    width: 100%;
+  //    height: 100%;
+  //    object-fit: cover;
+  //    display: block;
+  //    border: 0.3rem solid white;
+  //  }
+  //}
 }
 
 .galleryItem1 {
   grid-column-start: 1;
-  grid-column-end: 5;
+  grid-column-end: 1;
   grid-row-start: 1;
-  grid-row-end: 10;
+  grid-row-end: 3;
 
   /** Alternative Syntax **/
   /* grid-column: 1 / span 2;  */
@@ -77,10 +120,10 @@ body {
 }
 
 .galleryItem2 {
-  grid-column-start: 6;
-  grid-column-end: 10;
+  grid-column-start: 2;
+  grid-column-end: 2;
   grid-row-start: 1;
-  grid-row-end: 5;
+  grid-row-end: 1;
 
   /** Alternative Syntax **/
   /* grid-column: 3 / span 2;  */
@@ -88,10 +131,10 @@ body {
 }
 
 .galleryItem3 {
-  grid-column-start: 11;
-  grid-column-end: 15;
+  grid-column-start: 3;
+  grid-column-end: 3;
   grid-row-start: 1;
-  grid-row-end: 10;
+  grid-row-end: 3;
 
   /** Alternative Syntax **/
   /* grid-column: 5 / span 4;
@@ -99,10 +142,10 @@ body {
 }
 
 .galleryItem4 {
-  grid-column-start: 6;
-  grid-column-end: 10;
-  grid-row-start: 6;
-  grid-row-end: 10;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 2;
+  grid-row-end: 2;
 
   /** Alternative Syntax **/
   /* grid-column: 1 / span 4;  */
@@ -111,9 +154,9 @@ body {
 
 .galleryItem5 {
   grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 11;
-  grid-row-end: 15;
+  grid-column-end: 1;
+  grid-row-start: 3;
+  grid-row-end: 3;
 
   /** Alternative Syntax **/
   /* grid-column: 1 / span 4; */
@@ -121,54 +164,102 @@ body {
 }
 
 .galleryItem6 {
-  grid-column-start: 6;
-  grid-column-end: 10;
-  grid-row-start: 11;
-  grid-row-end: 20;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 3;
+  grid-row-end: 5;
 
   /** Alternative Syntax **/
   /* grid-column: 5 / span 4; */
   /* grid-row: 6 / span 3; */
 }
 .galleryItem7 {
-  grid-column-start: 11;
-  grid-column-end: 15;
-  grid-row-start: 11;
-  grid-row-end: 15;
+  grid-column-start: 3;
+  grid-column-end: 3;
+  grid-row-start: 3;
+  grid-row-end: 3;
 }
 .galleryItem8 {
   grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 16;
-  grid-row-end: 20;
+  grid-column-end: 1;
+  grid-row-start: 4;
+  grid-row-end: 4;
 }
 .galleryItem9 {
-  grid-column-start: 11;
-  grid-column-end: 15;
-  grid-row-start: 16;
-  grid-row-end: 20;
+  grid-column-start: 3;
+  grid-column-end: 3;
+  grid-row-start: 4;
+  grid-row-end: 4;
 }
 .galleryItem10 {
   grid-column-start: 1;
-  grid-column-end: 5;
-  grid-row-start: 21;
-  grid-row-end: 30;
+  grid-column-end: 1;
+  grid-row-start: 5;
+  grid-row-end: 7;
 }
 .galleryItem11 {
-  grid-column-start: 6;
-  grid-column-end: 10;
-  grid-row-start: 21;
-  grid-row-end: 25;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 5;
+  grid-row-end: 5;
 }
 .galleryItem12 {
-  grid-column-start: 6;
-  grid-column-end: 10;
-  grid-row-start: 26;
-  grid-row-end: 30;
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 6;
+  grid-row-end: 6;
 }
 .galleryItem13 {
-  grid-column-start: 11;
-  grid-column-end: 15;
-  grid-row-start: 21;
-  grid-row-end: 30;
+  grid-column-start: 3;
+  grid-column-end: 3;
+  grid-row-start: 5;
+  grid-row-end: 7;
+}
+.galleryItem14 {
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 7;
+  grid-row-end: 7;
+}
+.galleryItem15 {
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 7;
+  grid-row-end: 9;
+}
+.galleryItem16 {
+  grid-column-start: 3;
+  grid-column-end: 3;
+  grid-row-start: 7;
+  grid-row-end: 7;
+}
+.galleryItem17 {
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 8;
+  grid-row-end: 8;
+}
+.galleryItem18 {
+  grid-column-start: 3;
+  grid-column-end: 3;
+  grid-row-start: 8;
+  grid-row-end: 8;
+}
+.galleryItem19 {
+  grid-column-start: 1;
+  grid-column-end: 1;
+  grid-row-start: 9;
+  grid-row-end: 11;
+}
+.galleryItem20 {
+  grid-column-start: 2;
+  grid-column-end: 2;
+  grid-row-start: 9;
+  grid-row-end: 11;
+}
+.galleryItem21 {
+  grid-column-start: 3;
+  grid-column-end: 3;
+  grid-row-start: 9;
+  grid-row-end: 11;
 }
