--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -8,8 +8,24 @@
   text-align: center;
 
   @media (min-width: 600px) {
-    padding: 5rem;
+    padding: 3rem;
   }
+  @media (min-width: 1000px) {
+margin: auto;
+    width: 75vw;
+  }
+  @media (min-width: 1200px) {
+
+    width: 60vw;
+  }
+}
+
+.video {
+  margin: 3rem;
+  //width: 10vw;
+  height: auto;
+  border: 0.5rem solid #eaeaea;
+
 }
 
 .main {
@@ -51,6 +67,19 @@
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
   flex: 1;
+
+  @media (min-width: 600px) {
+    margin: 1rem 0.5rem;
+  }
+  @media (min-width: 1000px) {
+    margin: 1rem 1rem;
+
+  }
+  @media (min-width: 1200px) {
+
+
+  }
+
   &:hover {
     color: #836447;
   }
@@ -58,7 +87,19 @@
 
 .card h3 {
   color: #fff;
-  font-size: 1.5rem;
+  font-size: 1rem;
+
+  @media (min-width: 600px) {
+    font-size: 1.5rem;
+  }
+  @media (min-width: 1000px) {
+    font-size: 1.5rem;
+
+  }
+  @media (min-width: 1200px) {
+
+
+  }
 }
 
 .radial {
@@ -290,7 +331,7 @@ $blue: #1a7fa8;
             &:nth-child(5) {
               visibility: visible;
 
-              transform: rotate(#{randomNum(-10, 10)}deg) translate(-60px, 260px);
+              transform: rotate(#{randomNum(-10, 10)}deg) translate(20px, 260px);
               transition-delay: 0.6s;
             }
           }
@@ -360,6 +401,7 @@ $blue: #1a7fa8;
       width: 100%;
       height: 50vh;
       border: 0.5rem solid white;
+
       background: transparent !important;
       position: relative;
 
@@ -370,9 +412,25 @@ $blue: #1a7fa8;
 
       > div {
         &:nth-child(5) {
-          box-shadow: 0px 0px 0px 5px #fff;
-        }
+          animation: image 1s linear;
 
+          box-shadow: 0px 0px 0px 5px #fff;
+
+
+        }
+        @keyframes image {
+          0% {
+            opacity: 0;
+box-shadow: none          }
+          50% {
+            opacity: 0.5;
+          }
+          100% {
+            opacity: 1;
+            box-shadow: 0px 0px 0px 5px #fff;
+
+          }
+        }
         > div {
           width: 50vw;
         }
