--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,20 +1,45 @@
 //@import url('https://fonts.googleapis.com/css2?family=Comfortaa&display=swap');
+@font-face {
+  font-family: 'Comfortaa';
+  font-style: normal;
+  font-weight: 400;
+  font-display: swap;
+  src: local('Comfortaa'), url(/Comfortaa.woff) format('woff');
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  background-image: url('/rawpixel-593612-unsplash.jpg');
+  animation: backgroundImage 1s linear;
+  //transition: opacity 0.15s ease, background-image 0.15s ease;
+  ////animation-delay:.4s;
+  //box-shadow: -27px 18px 80px 0 rgba(0, 0, 0, 0.3);
+  //transition: all 0.3s cubic-bezier(0.28, 0.05, 0.65, 0.97);
+
+  background-image: url("/rawpixel-593612-unsplash.jpg");
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-family: 'Comfortaa', cursive;
-  color:white;
-//display: flex;
+  font-family: "Comfortaa", cursive;
+  color: white;
+  //display: flex;
 
   @media (min-width: 600px) {
     //font-size: 4rem;
+  }
 
+  @keyframes backgroundImage {
+    0% {
+      opacity: 0;
+    }
+    50% {
+      opacity: 0.5;
+    }
+    100% {
+      opacity: 1;
+    }
   }
 }
 
@@ -33,9 +58,8 @@ h1 {
   font-family: "Comfortaa", cursive;
   text-shadow: brown 1px 1px 1px;
 
-  @media (min-width: 600px) {
+  @media (min-width: 800px) {
     font-size: 3rem;
-
   }
 }
 
@@ -48,6 +72,5 @@ p {
 
   @media (min-width: 600px) {
     font-size: 1.5rem;
-
   }
 }
