--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -6,31 +6,40 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  background-image: url("/gallery/oakSelfBearingStairs/IMG_20200908_172028.jpg");
+  background-repeat: no-repeat;
+  background-size: 100% 50%;
 
   @media (min-width: 600px) {
     padding: 3rem;
+    background-size: 100% 60%;
+    background-image: url("/gallery/customChildrenBed/IMG_20210111_171400.jpg");
   }
   @media (min-width: 1000px) {
-margin: auto;
+    margin: auto;
     width: 75vw;
+    background-position: 0px 30px;
   }
   @media (min-width: 1200px) {
-
     width: 60vw;
+  }
+  h1 {
+    padding: 2rem 1rem 0;
+    margin: 2rem 0;
+  }
+  h2 {
+    margin: 4rem 0 2rem;
   }
 }
 
 .video {
   margin: 3rem;
-  //width: 10vw;
   height: auto;
   border: 0.5rem solid #eaeaea;
-
 }
 
 .main {
   padding: 5rem 0;
-  /*flex: 1;*/
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -51,9 +60,7 @@ margin: auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  //flex-wrap: wrap;
-  //max-width: 800px;
-  margin-top: 3rem;
+  margin-top: 10rem;
 }
 
 .card {
@@ -73,11 +80,8 @@ margin: auto;
   }
   @media (min-width: 1000px) {
     margin: 1rem 1rem;
-
   }
   @media (min-width: 1200px) {
-
-
   }
 
   &:hover {
@@ -94,11 +98,8 @@ margin: auto;
   }
   @media (min-width: 1000px) {
     font-size: 1.5rem;
-
   }
   @media (min-width: 1200px) {
-
-
   }
 }
 
@@ -110,7 +111,6 @@ margin: auto;
   background: transparent;
   transition-property: color;
   transition-duration: 0.3s;
-  //color: white;
 
   &:nth-child(2) {
     @media (min-width: 600px) {
@@ -121,7 +121,6 @@ margin: auto;
         border-radius: 10px;
         transform: rotate(0);
         animation: shake 0.4s 1;
-        //animation-delay:.4s;
         box-shadow: -27px 18px 80px 0 rgba(0, 0, 0, 0.3);
         transition: all 0.3s cubic-bezier(0.28, 0.05, 0.65, 0.97);
         width: 100%;
@@ -182,186 +181,6 @@ margin: auto;
   }
 }
 
-$grey1: #e8e8ee;
-$grey2: #9497aa;
-$grey3: #5a5863;
-$brown: #ab816b;
-$blue: #1a7fa8;
-
-@function randomNum($min, $max) {
-  $rand: random();
-  $randomNum: $min + floor($rand * (($max - $min) + 1));
-
-  @return $randomNum;
-  /* e.g. font-size: #{randomNum(5, 10)}px; */
-}
-
-.content {
-  h3 {
-    color: white;
-    z-index: 10;
-    &:hover {
-      color: #836447;
-    }
-  }
-  &:hover {
-    //background: white;
-    //z-index: 15;
-    //border-radius: 10px;
-    //transform: rotate(0);
-    //animation: shake 0.4s 1;
-    ////animation-delay:.4s;
-    //box-shadow: -27px 18px 80px 0 rgba(0, 0, 0, 0.3);
-    //transition: all 0.3s cubic-bezier(0.28, 0.05, 0.65, 0.97);
-    //width: 100%;
-    //height: 100%;
-  }
-
-  .containerPicture {
-    display: none;
-    @media (min-width: 600px) {
-      font-size: 4rem;
-      display: block;
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      flex-basis: 45%;
-      padding: 1.5rem;
-      //color: #fff;
-      text-decoration: none;
-      transition: color 0.15s ease, border-color 0.15s ease;
-
-      @media (min-width: 600px) {
-        //flex-wrap:wrap;
-      }
-
-      .item {
-        position: relative;
-        width: 100%;
-        height: 100%;
-        cursor: pointer;
-        z-index: 0;
-
-        @media (max-width: 968px) {
-          width: 100%;
-        }
-
-        .previews {
-          position: relative;
-          bottom: 0;
-          left: 0;
-          z-index: -1;
-
-          &:nth-child(2) {
-            .previewImage {
-              right: 0;
-            }
-          }
-
-          .previewImage {
-            visibility: hidden;
-            width: 160px;
-            height: 110px;
-            transition: all 0.6s cubic-bezier(0.28, 0.05, 0.65, 0.97);
-            position: absolute;
-            bottom: 10px;
-            left: 0;
-            border-radius: 4px;
-            box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.3);
-
-            img {
-              width: 100%;
-              height: 100%;
-              object-fit: cover;
-              display: block;
-              border: 0.3rem solid white;
-            }
-          }
-        }
-      }
-
-      &:hover {
-        //z-index: 5;
-        //border-radius:10px ;
-        //transform: rotate(0) ;
-        //animation: shake 0.4s 1;
-        ////animation-delay:.4s;
-        //box-shadow: -27px 18px 80px 0 rgba(0, 0, 0, 0.3);
-        //transition: all 0.3s cubic-bezier(0.28, 0.05, 0.65, 0.97);
-        //width: 100%;
-        //height: 100%;
-
-        .previews {
-          .previewImage {
-            transition: all 0.6s cubic-bezier(0.28, 0.05, 0.65, 0.97);
-            box-shadow: -8px 5px 30px 0 rgba(0, 0, 0, 0.2);
-            z-index:-1;
-
-            &:nth-child(1) {
-              visibility: visible;
-              transform: rotate(#{randomNum(-10, -10)}deg)
-                translate(-160px, 0px);
-              transition-delay: 0.4s;
-            }
-
-            &:nth-child(2) {
-              visibility: visible;
-
-              transform: rotate(#{randomNum(-10, 10)}deg) translate(40px, -10px);
-              transition-delay: 0.45s;
-            }
-
-            &:nth-child(3) {
-              visibility: visible;
-
-              transform: rotate(#{randomNum(-10, 10)}deg)
-                translate(-130px, 200px);
-              transition-delay: 0.55s;
-            }
-
-            &:nth-child(4) {
-              visibility: visible;
-
-              transform: rotate(#{randomNum(-10, 10)}deg) translate(110px, 155px);
-              transition-delay: 0.5s;
-            }
-
-            &:nth-child(5) {
-              visibility: visible;
-
-              transform: rotate(#{randomNum(-10, 10)}deg) translate(20px, 260px);
-              transition-delay: 0.6s;
-            }
-          }
-        }
-      }
-
-      @keyframes shake {
-        0% {
-          transform: rotate(3deg) scale(1.2);
-        }
-        20% {
-          transform: rotate(-3deg) scale(1.2);
-        }
-        40% {
-          transform: rotate(3deg) scale(1.2);
-        }
-        60% {
-          transform: rotate(-3deg) scale(1.2);
-        }
-        80% {
-          transform: rotate(3deg) scale(1.2);
-        }
-        100% {
-          transform: rotate(0) scale(1.2);
-        }
-      }
-    }
-  }
-}
-
 .footer {
   width: 100%;
   height: 100px;
@@ -385,106 +204,4 @@ $blue: #1a7fa8;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.container {
-  padding-top: 3rem;
-  > div {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-wrap: wrap;
-    > div {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      width: 100%;
-      height: 50vh;
-      border: 0.5rem solid white;
-
-      background: transparent !important;
-      position: relative;
-
-      @media (min-width: 480px) {
-        height: unset;
-        width: unset;
-      }
-
-      > div {
-        &:nth-child(5) {
-          animation: image 1s linear;
-
-          box-shadow: 0px 0px 0px 5px #fff;
-
-
-        }
-        @keyframes image {
-          0% {
-            opacity: 0;
-box-shadow: none          }
-          50% {
-            opacity: 0.5;
-          }
-          100% {
-            opacity: 1;
-            box-shadow: 0px 0px 0px 5px #fff;
-
-          }
-        }
-        > div {
-          width: 50vw;
-        }
-      }
-    }
-  }
-
-  .ReactGridGallery_tile {
-    background: red;
-  }
-}
-
-.linksContainer {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  @media (min-width: 480px) {
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: baseline;
-  }
-  a {
-    //flex-direction: column;
-    padding: 1rem;
-    margin: 0.5rem;
-    //border: 0.5rem solid white;
-    //  display: flex;
-    //align-items: center;
-    //  justify-content: center;
-    position: relative;
-
-    @media (min-width: 480px) {
-      max-width: 30%;
-    }
-
-    img {
-      border: 0.3rem solid white;
-      height: 10rem;
-      width: auto;
-      margin-bottom: 1rem;
-      @media (min-width: 480px) {
-        //flex-shrink: initial;
-      }
-    }
-
-    p {
-      position: absolute;
-      bottom: 0;
-      left: 0;
-      margin: 1rem 0;
-      //object-fit: cover;
-      //display: block;
-    }
-  }
 }
