--- a/styles/GalleryOverview.module.scss
+++ b/styles/GalleryOverview.module.scss
@@ -1,25 +1,5 @@
-//*,
-//*::after,
-//*::before {
-//  margin: 0;
-//  padding: 0;
-//  box-sizing: inherit;
-//}
-
-html {
-  //box-sizing: border-box;
-  //font-size: 62.5%;
-}
-
-body {
-  //font-family: "Nunito", sans-serif;
-  //color: #333;
-  //font-weight: 300;
-  //line-height: 1.6;
-}
-
 .container {
-  padding: 2rem ;
+  padding: 2rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -27,36 +7,33 @@ body {
 
   @media (min-width: 480px) {
     margin: 1rem auto;
-padding: 0;
-    width: 60vw;
 
+    padding: 0;
+    width: 80vw;
+  }
+  @media (min-width: 600px) {
+    margin: 1rem auto;
+
+    padding-top: 3rem;
   }
   @media (min-width: 960px) {
-
     width: 60vw;
-
+  }
+  h1 {
+    padding: 2rem 1rem 0;
   }
 }
 
 .gallery {
-  //display: grid;
-  //grid-template-columns: repeat(3, 30vw);
-  //grid-template-rows: repeat(10, 20vh);
-  //grid-gap: 0.8rem;
-  //column-gap: 0.8rem;
-  //align-content: stretch;
-
   @media (min-width: 480px) {
     display: grid;
     grid-template-columns: repeat(3, 30vw);
     grid-template-rows: repeat(10, 20vh);
   }
   @media (min-width: 1000px) {
-
     grid-template-columns: repeat(3, 25vw);
   }
   @media (min-width: 1200px) {
-
     grid-template-columns: repeat(3, 20vw);
     grid-template-rows: repeat(10, 25vh);
   }
@@ -65,9 +42,7 @@ padding: 0;
 .galleryItem {
   justify-self: center;
   flex-direction: column;
-  //padding: 1rem;
   margin-bottom: 2rem;
-  //border: 0.5rem solid white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -81,7 +56,6 @@ padding: 0;
   p {
     text-align: center;
     position: absolute;
-    //border: 1rem solid transparent;
     bottom: 0.3rem;
     right: 0.3rem;
     left: 0.3rem;
@@ -95,17 +69,6 @@ padding: 0;
   display: block;
   animation: image 1s linear;
   border: 0.3rem solid white;
-
-
-  //div {
-  //  img{
-  //    width: 100%;
-  //    height: 100%;
-  //    object-fit: cover;
-  //    display: block;
-  //    border: 0.3rem solid white;
-  //  }
-  //}
 }
 
 .galleryItem1 {
@@ -113,10 +76,6 @@ padding: 0;
   grid-column-end: 1;
   grid-row-start: 1;
   grid-row-end: 3;
-
-  /** Alternative Syntax **/
-  /* grid-column: 1 / span 2;  */
-  /* grid-row: 1 / span 2; */
 }
 
 .galleryItem2 {
@@ -124,10 +83,6 @@ padding: 0;
   grid-column-end: 2;
   grid-row-start: 1;
   grid-row-end: 1;
-
-  /** Alternative Syntax **/
-  /* grid-column: 3 / span 2;  */
-  /* grid-row: 1 / span 2; */
 }
 
 .galleryItem3 {
@@ -135,10 +90,6 @@ padding: 0;
   grid-column-end: 3;
   grid-row-start: 1;
   grid-row-end: 3;
-
-  /** Alternative Syntax **/
-  /* grid-column: 5 / span 4;
-  grid-row: 1 / span 5; */
 }
 
 .galleryItem4 {
@@ -146,10 +97,6 @@ padding: 0;
   grid-column-end: 2;
   grid-row-start: 2;
   grid-row-end: 2;
-
-  /** Alternative Syntax **/
-  /* grid-column: 1 / span 4;  */
-  /* grid-row: 3 / span 3; */
 }
 
 .galleryItem5 {
@@ -157,10 +104,6 @@ padding: 0;
   grid-column-end: 1;
   grid-row-start: 3;
   grid-row-end: 3;
-
-  /** Alternative Syntax **/
-  /* grid-column: 1 / span 4; */
-  /* grid-row: 6 / span 3; */
 }
 
 .galleryItem6 {
@@ -168,10 +111,6 @@ padding: 0;
   grid-column-end: 2;
   grid-row-start: 3;
   grid-row-end: 5;
-
-  /** Alternative Syntax **/
-  /* grid-column: 5 / span 4; */
-  /* grid-row: 6 / span 3; */
 }
 .galleryItem7 {
   grid-column-start: 3;
